--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kelvinjs-btc",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "kelvinjs-btc",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -8,7 +8,7 @@
     "lib"
   ],
   "engines": {
-    "node": ">=10.0.0"
+    "node": "^10"
   },
   "repository": {
     "type": "git",
@@ -16,12 +16,12 @@
   },
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
-    "bignumber.js": "^9.0.0",
-    "bitcoinjs-lib": "^5.1.6",
+    "axios": "0.19.0",
+    "bignumber.js": "9.0.0",
+    "bitcoinjs-lib": "5.1.6",
     "coinselect": "git+https://github.com/CoinbaseWallet/coinselect.git#b3c487a42e4a1c0b2ed539aa2f38c64411e5651b",
-    "kelvinjs-protob": "git+https://github.com/KelvinWallet/kelvinjs-protob.git#v1.0.0",
-    "secp256k1": "^3.7.1"
+    "kelvinjs-protob": "git+https://github.com/KelvinWallet/kelvinjs-protob.git#v1.0.1",
+    "secp256k1": "3.7.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.3",
@@ -32,7 +32,7 @@
     "@types/secp256k1": "^3.5.0",
     "chai": "^4.2.0",
     "cross-env": "^6.0.0",
-    "kelvinjs-usbhid": "git+https://github.com/KelvinWallet/kelvinjs-usbhid.git#v1.0.0",
+    "kelvinjs-usbhid": "git+https://github.com/KelvinWallet/kelvinjs-usbhid.git#v1.0.1",
     "mocha": "^6.2.0",
     "rimraf": "^3.0.0",
     "ts-node": "^8.4.1",
